Issue 171: Hide the mobile menu on tablet

--- a/_sass/customize_theme.scss
+++ b/_sass/customize_theme.scss
@@ -135,7 +135,7 @@ a.navbar-brand {
     }
 
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     .navbar-header {
 
@@ -308,7 +308,7 @@ ul.navbar-nav > li {
     }
 
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     li.dropdown {
 
@@ -635,7 +635,7 @@ a.list-item-image img {
 .promo-box .highlight {
     color: #ffffff;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     .promo-holder {
         min-height: 150px;
@@ -845,7 +845,7 @@ a.list-item-image img {
     margin-bottom: 20px;
     clear: both;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 
     #content-layer {
         top: 0;
